--- a/src/app/components/insurance/main-insurance/main-insurance.component.css
+++ b/src/app/components/insurance/main-insurance/main-insurance.component.css
@@ -1,6 +1,9 @@
 
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 998px) {
+.form-grid-container {
+  display: block;
+}
 
 #progressBar {
   margin: 33px;
